<resources>
    <string name="app_name">CineMate</string>
    <string name="skip">Skip</string>
    <string name="continu_e">Continue</string>
    <string name="get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_short">Lorem Ipsum is simply dummy text </string>
    <string name="lorem_ipsum_long">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="top_10_movies">Top Movies This Week</string>
    <string name="see_all">See All</string>
    <string name="new_release">New Releases</string>
    <string name="movie_image">Movie Image</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="please_wait">Please Wait</string>
    <string name="empty_mail">Email is empty.</string>
    <string name="empty_name">Full name is empty.</string>
    <string name="empty_nickname">Nickname is empty.</string>
    <string name="empty_password">The password is empty.</string>
    <string name="invalid_mail">Email is invalid.</string>
    <string name="short_password">The password is too short. (At least should be 6 symbols.)</string>
    <string name="letter_digit_pass">The password needs to contain at least one digit and letter.</string>
    <string name="login_title">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_acc">Don’t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="suc">Successful</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="have_acc">Already have an account?</string>
    <string name="create_acc">Create Your Account</string>
    <string name="fill_profile">Fill Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="not_selected_photo">Photo not selected.</string>
    <string name="congrats">Congratulations!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="acc_suc">Your account is ready to use. You need to verify your account to use application.</string>
    <string name="acc_verify">Verification email has been sent to your mail. Verify your account to use application. If you can\'t find the email, check the spam section.</string>
    <string name="forgot_pass_title">Select which contact details should we use to reset your password</string>
    <string name="via_email">via Email:</string>
    <string name="pass_suc_title">The link has been sent to your email address. Please follow the link to reset your password. If you can\'t find the email, check the spam section.</string>
    <string name="go_back">Go Back</string>
    <string name="check_mail">Check Email</string>
    <string name="do_not_have_mail_app">There is no mail program on the device.</string>
    <string name="profile">Profile</string>
    <string name="ai_powered">AI Powered.</string>
    <string name="ai_powered_title">Try our AI for your movie or series. Our MovieAI can help you in that way. Don\'t forget to try it.</string>
    <string name="duration">Duration : %s</string>
    <string name="director">Director : %s</string>
    <string name="genre">Genre</string>
    <string name="watchlist">Watchlist</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="top_movies">Top Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="search">Search</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="play">Play</string>
    <string name="images">Images</string>
    <string name="share">Share</string>
    <string name="favorites">Favorites</string>
    <string name="view_more">View More</string>
    <string name="view_less">View Less</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="update_failed">Update failed.</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="ai_message_welcome_3">Suggest me series</string>
    <string name="ai_message_welcome_1">What can you do for me?</string>
    <string name="ai_message_welcome_2">Suggest me movies.</string>
    <string name="ai_suggest_movie_in_genre">Suggest me movies in genre of</string>
    <string name="movie_ai">Movie AI</string>
    <string name="online">Online</string>
    <string name="ai_show_case_1">Welcome to Movie AI. (Powered by Gemini AI)</string>
    <string name="ai_message_4">What can I do for you?</string>
    <string name="ai_message_5">Please select genre for improve your search</string>
    <string name="ai_message_6">In which genre do you interested in?</string>
    <string name="ai_show_case_2">Movie AI is more powerful than you think.</string>
    <string name="ai_show_case_3">Choose the movie and series in your mind with artificial intelligence.</string>
    <string name="videos">Videos</string>
    <string name="more_like_this">More Like This</string>
    <string name="comments">Comments</string>
    <string name="ok">OK</string>
    <string name="cast">Cast</string>
    <string name="change">Change</string>
    <string name="choose_language">Choose language</string>
    <string name="crew">Crew</string>
    <string name="list_empty">Your List is Empty</string>
    <string name="favorites_empty">It seems that you haven\'t added any movies to the list</string>
    <string name="not_found">Not Found</string>
    <string name="empty_search">Sorry, the keyword you entered could not be found. Try to check again or search with other keywords.</string>
    <string name="log_out_title">Logout</string>
    <string name="log_out_message">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Yes, Logout</string>
    <string name="feature_info">This feature isn\'t available for now</string>
    <string name="recommend_title">Recommend to watch</string>
    <string name="celebs_title">Popular celebs</string>
    <string name="movies_and_tv_shows">Movies and TV Shows</string>
    <string name="tv_series">Tv Series</string>
    <string name="celebrities">Celebrities</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="nothing_to_show">Nothing to show :(</string>
    <string name="notifications">Notifications</string>
    <string name="empty_notifications">Notifications are empty.</string>
    <string name="default_notification_channel_id">NOTIFICATION_CHANNEL</string>
    <string name="choose_language_onboarding">Hello! 👋🏻\n<nobrake>Choose the interface language.</nobrake> </string>
    <string name="onboarding_screen_text_1">Welcome to CineMate!</string>
    <string name="onboarding_screen_subtext_1">Ready to start your cinematic journey?</string>
    <string name="onboarding_screen_text_2">Don\'t know what to watch?</string>
    <string name="onboarding_screen_subtext_2">Movie AI (Powered by Gemini AI) will help you to choose!</string>
    <string name="onboarding_screen_text_3">Enjoy Anywhere, Anytime</string>
    <string name="onboarding_screen_subtext_3">Your entertainment, your way.</string>
    <string name="az_flag">🇦🇿 AZ</string>
    <string name="en_flag">🇬🇧 EN</string>
    <string name="ru_flag">🇷🇺 RU</string>
    <string name="settings">Settings</string>
    <string name="acting">Acting</string>
    <string name="language">Language</string>
    <string name="no_permission_for_notifications">You will not receive notifications. We don\'t have permission</string>
    <string name="refresh">Try Again</string>
    <string name="exit_app">Exit the CineMate</string>
    <string name="network_error">Network Error</string>
    <string name="network_message">Please check your internet connection and try again</string>
    <string name="download">Download</string>
    <string name="photo_save_suc">Photo saved to gallery.</string>
    <string name="permission_storage">We need permission to save or share the photo.</string>
    <string name="photo">Photo</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_delete">Are you sure to delete your account?</string>

</resources>