<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/bottom_home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/bottom_explore_icon"
        android:title="@string/explore" />

    <item
        android:id="@+id/movieAiFragment"
        android:icon="@drawable/bottom_ai_icon"
        android:title="@string/movie_ai" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/bottom_icon_save"
        android:title="@string/favorites" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/bottom_profile_icon"
        android:title="@string/profile" />


</menu>