<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.onboarding.OnboardingLanguageFragment">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/language_choose_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/urbanist_800"
        android:text="@string/choose_language_onboarding"
        android:textColor="@color/black_21"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="@+id/textView49"
        app:layout_constraintStart_toStartOf="@+id/textView49"
        app:layout_constraintTop_toBottomOf="@+id/textView49"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAz"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/az_flag"
            android:textColor="@color/black_21"
            android:textSize="16sp"
            app:chipIconTint="@color/black_21"
            app:rippleColor="@color/red_21" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEn"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/en_flag"
            android:textColor="@color/black_21"
            android:textSize="16sp"
            app:chipIconTint="@color/black_21"
            app:rippleColor="@color/red_21" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chipRu"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/ru_flag"
            android:textColor="@color/black_21"
            android:textSize="16sp"
            app:chipIconTint="@color/black_21"
            app:rippleColor="@color/red_21" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:elevation="3dp"
        android:fontFamily="@font/urbanist_700"
        android:paddingVertical="16dp"
        android:stateListAnimator="@null"
        android:text="@string/continu_e"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>