<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider4"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            app:dividerColor="@color/grey_9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/choose_language"
            android:textColor="@color/red_21"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider4" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView51">

            <RadioButton
                android:id="@+id/radio_az"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_700"
                android:paddingHorizontal="8dp"
                android:text="@string/az_flag"
                android:textSize="20sp"
                app:buttonTint="@color/red_21" />

            <RadioButton
                android:id="@+id/radio_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_700"
                android:paddingHorizontal="8dp"
                android:text="@string/en_flag"
                android:textSize="20sp"
                app:buttonTint="@color/red_21" />

            <RadioButton
                android:id="@+id/radio_ru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_700"
                android:paddingHorizontal="8dp"
                android:text="@string/ru_flag"
                android:textSize="20sp"
                app:buttonTint="@color/red_21" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>