<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.profile.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_left_icon"

        app:navigationIconTint="@color/black_21"
        app:title="@string/settings"
        app:titleTextAppearance="@style/UrbanBoldTextAppearance"
        app:titleTextColor="@color/black_21" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="16dp"
            android:fontFamily="@font/urbanist_600"
            android:gravity="start|center"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/language"
            android:textColor="@color/black_21"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/language_icon"
            app:drawableTint="@color/black_21" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/az_flag"
            android:textSize="20sp" />

    </LinearLayout>


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/buttonDarkMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/eye_icon"
        android:drawablePadding="16dp"
        android:fontFamily="@font/urbanist_600"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:text="@string/dark_mode"
        android:textColor="@color/black_21"
        android:textSize="20sp"
        app:drawableTint="@color/black_21"
        android:checked="true"
        app:thumbTint="@color/white_f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>